atualizando página de login

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <input class="login-input" type="password" placeholder="senha">
                 <span class="login-input-border"></span>
                 <button class="login-submit">Login</button>
-                <a class="login-reset" href="#" >Esqueci a senha</a>
+                <a class="login-reset" href="#" >Esqueceu a senha ?</a>
            </form>
        </div>
    </main>
